@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,30 +22,10 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package com.oracle.graal.pointsto.flow;
+package hello.privateLib;
 
-import com.oracle.graal.pointsto.BigBang;
-import com.oracle.graal.pointsto.meta.AnalysisType;
-import com.oracle.graal.pointsto.typestate.TypeState;
-
-public final class UnknownTypeFlow extends TypeFlow<AnalysisType> {
-
-    public UnknownTypeFlow() {
-        super(TypeState.forUnknown());
-    }
-
-    @Override
-    public TypeFlow<AnalysisType> copy(BigBang bb, MethodFlowsGraph methodFlows) {
-        return this;
-    }
-
-    @Override
-    public boolean canSaturate() {
-        return false;
-    }
-
-    @Override
-    public String toString() {
-        return "Unknown" + super.toString();
+public class Greeter {
+    public static void greet() {
+        System.out.println("Seeing this requires --add-exports");
     }
 }
